--- a/afldatepicker.css
+++ b/afldatepicker.css
@@ -92,12 +92,12 @@ body{
 
 /* states and images */
 .ui-icon { width: 16px; height: 16px; background-image: url(images/ui-icons_222222_256x240.png); }
-.ui-widget-content .ui-icon {background-image: url(images/ui-icons_222222_256x240.png); }
-.ui-widget-header .ui-icon {background-image: url(images/ui-icons_b83400_256x240.png); }
-.ui-state-default .ui-icon { background-image: url(images/ui-icons_b83400_256x240.png); }
-.ui-state-hover .ui-icon, .ui-state-focus .ui-icon {background-image: url(images/ui-icons_ffffff_256x240.png); }
-.ui-state-active .ui-icon {background-image: url(images/ui-icons_8c291d_256x240.png); }
-.ui-state-highlight .ui-icon {background-image: url(images/ui-icons_3572ac_256x240.png); }
+.ui-widget-content .ui-icon {background-color: #ddd; }
+.ui-widget-header .ui-icon {background-color: #ddd; }
+.ui-state-default .ui-icon {background-color: #ddd; }
+.ui-state-hover .ui-icon, .ui-state-focus .ui-icon {background-color: #999; }
+.ui-state-active .ui-icon {background-color: #666; }
+.ui-state-highlight .ui-icon {background-color: #666; }
 .ui-state-error .ui-icon, .ui-state-error-text .ui-icon {background-image: url(images/ui-icons_fbdb93_256x240.png); }
 
 /* positioning */
